Fix overflowing width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -233,13 +233,14 @@ body {
 header {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: min-content max-content auto;
-      grid-template-columns: -webkit-min-content -webkit-max-content auto;
-      grid-template-columns: min-content max-content auto;
+  -ms-grid-columns: min-content max-content 1fr;
+      grid-template-columns: -webkit-min-content -webkit-max-content 1fr;
+      grid-template-columns: min-content max-content 1fr;
   background-color: #408852;
   -webkit-box-shadow: 0 0 0.8125rem 0 rgba(0, 0, 0, 0.75);
           box-shadow: 0 0 0.8125rem 0 rgba(0, 0, 0, 0.75);
   margin-bottom: 1rem;
+  max-width: 100vw !important;
 }
 
 #logo-container,
@@ -252,11 +253,7 @@ header {
 
 #site-title {
   font-size: 1.5rem;
-  -ms-grid-column-align: left;
-      justify-self: left;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  place-self: stretch;
   text-align: left;
   font-family: "Bebas Neue", cursive;
   text-transform: uppercase;
@@ -284,9 +281,6 @@ header {
 
 /** Mobile Layout **/
 .toggle-label {
-  place-self: stretch;
-  width: inherit;
-  height: auto;
   padding: 1em;
   text-align: center;
   background-color: black;
